# lab_vikafoer

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists_main.txt  Dockerfile  Procfile  README.md  auto_restart.bat  auto_restart_main.bat  auto_restart_server.ps1  compile_main.bat  git_commit.bat  index.html  main_server.cpp  nixpacks.toml  railway.json  railway.toml  run_main_server.bat
common/: server_base.h
lab1/: CMakeLists.txt  compile.bat  main.cpp  run_server.bat
lab1/web/: index.html  script.js  style.css
lab10/: CMakeLists.txt  main.cpp
lab10/web/: index.html  script.js  style.css
lab11/: CMakeLists.txt  main.cpp
lab11/web/: index.html  script.js  style.css
lab12/: main.cpp
lab12/web/: index.html  script.js  style.css
lab2/: CMakeLists.txt  build_and_run.bat  compile.bat  main.cpp  run_server.bat
lab2/web/: index.html  script.js  style.css
lab3/: CMakeLists.txt  main.cpp
lab3/web/: index.html  script.js  style.css
lab4/: CMakeLists.txt  main.cpp
lab4/web/: index.html  script.js  style.css
lab5/: CMakeLists.txt  main.cpp
lab5/web/: index.html  script.js  style.css
lab6/: CMakeLists.txt  main.cpp
lab6/web/: index.html  script.js  style.css
lab7/: CMakeLists.txt  main.cpp
lab7/web/: index.html  script.js  style.css
lab8/: CMakeLists.txt  main.cpp
lab8/web/: index.html  script.js  style.css
lab9/: CMakeLists.txt  main.cpp
lab9/web/: index.html  script.js  style.css
static/: script.js  style.css
